@@ -1,6 +1,6 @@
 {
   "name":    "simp-sudo",
-  "version": "4.1.2",
+  "version": "5.0.0",
   "author":  "simp",
   "summary": "Manage sudo",
   "license": "Apache-2.0",
@@ -15,7 +15,7 @@
     },
     {
       "name": "simp/simpcat",
-      "version_requirement": ">= 4.0.0"
+      "version_requirement": ">= 6.0.0"
     },
     {
       "name": "simp/rsync",
